; ModuleID = '/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn.c_setup_sd_notify_parent.c'
source_filename = "/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn.c_setup_sd_notify_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EPOLLIN = common dso_local global i32 0, align 4
@nspawn_dispatch_notify_fd = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"Failed to allocate notify event source: %m\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"nspawn-notify\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32**)* @setup_sd_notify_parent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_sd_notify_parent(i32* %0, i32 %1, i32* %2, i32** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32** %3, i32*** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32**, i32*** %9, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @EPOLLIN, align 4
  %15 = load i32, i32* @nspawn_dispatch_notify_fd, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @sd_event_add_io(i32* %11, i32** %12, i32 %13, i32 %14, i32 %15, i32* %16)
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %4
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @log_error_errno(i32 %21, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  store i32 %22, i32* %5, align 4
  br label %27

23:                                               ; preds = %4
  %24 = load i32**, i32*** %9, align 8
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @sd_event_source_set_description(i32* %25, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %5, align 4
  br label %27

27:                                               ; preds = %23, %20
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @sd_event_add_io(i32*, i32**, i32, i32, i32, i32*) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @sd_event_source_set_description(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
